Fix word wrap in messages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,6 +79,7 @@ a {
   color: white;
   max-width: 450px;
   margin-top: 0.5rem;
+  word-wrap: break-word;
 }
 
 .message:nth-child(3n-1) .message-text {
